
\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.13.1 (2017-03-15)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item The \code{calibrationTest()} and \code{pit()} methods for
    \code{"oneStepAhead"} forecasts gained an argument \code{units}
    to allow for unit-specific assessments.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{scores.hhh4()} sets rownames for consistency with
    \code{scores.oneStepAhead()}.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item 
  }
}

}


\section{Changes in surveillance version 1.13.0 (2016-12-20)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{earsC} now has two new arguments thanks to Howard
    Burkom: the number of past time units to be used in  calculation is
    now not always 7, it can be chosen in the \code{baseline} parameter.
    Furthermore, the \code{minSigma} parameter allows to get a threshold
    in the case of sparse data. When one doesn't give any value for those
    two parameters, the algorithm works like it used to.

    \item \code{animate.sts()} gained support for date labels in the
    bottom \code{timeplot}.

    \item \code{stsplot_space()} and \code{animate.sts()} can now
    generate incidence maps based on the population information
    stored in the supplied \code{"sts"} object.
    Furthermore, \code{animate.sts()} now supports time-varying
    population numbers.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{hhh4()} guards against the misuse of
    \code{family = factor("Poisson")} for univariate time series.
    Previously, this resulted in a negative binomial model by
    definition, but is now interpreted as \code{family = "Poisson"}
    (with a warning).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{animate.sts()} now supports objects with missing values
    (with a warning). Furthermore, the automatic color breaks have been